# spoonbill

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  api.html  babel.cfg  changelog.html  cli.html  contributing.html  entrypoint.sh  genindex.html  index.html  library.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tables.html  tox.ini
.github/workflows/: ci.yml  docs.yaml  lint.yml  pr.yaml  push.yaml  push_tag.yaml  pypi.yml
.tx/: config
_modules/: index.html
_modules/spoonbill/: cli.html  flatten.html  spec.html  stats.html
_modules/spoonbill/writers/: base_writer.html  csv.html  xlsx.html
_sources/: contributing.rst.txt  index.rst.txt  library.rst.txt
_static/: documentation_options.js
docs/: api.rst  changelog.rst  cli.rst  conf.py  contributing.rst  index.rst  library.rst  requirements.txt  tables.rst
docs/_static/: custom.css
docs/source/: api.rst  change-log.rst  cli-usage.rst  cli.rst  cli_usage.rst  conf.py  developer-guide.rst  flattenning-conf.rst  getting-started.rst  index.rst
spoonbill/: __init__.py  cli.py  common.py  exceptions.py  flatten.py  i18n.py  rowdata.py  spec.py  stats.py  utils.py  writer.py
spoonbill/locale/: messages.pot
spoonbill/locale/en/LC_MESSAGES/: spoonbill.po
spoonbill/locale/es/LC_MESSAGES/: spoonbill.po
spoonbill/locales/: base.pot
spoonbill/locales/en/LC_MESSAGES/: spoonbill.mo  spoonbill.po
spoonbill/locales/es/LC_MESSAGES/: spoonbill.mo  spoonbill.po
spoonbill/writers/: __init__.py  base_writer.py  csv.py  xlsx.py
tests/: __init__.py  conftest.py  data.py  test_cli.py  test_extractor.py  test_flatten.py  test_i18n.py  test_spec.py  test_stats.py  test_writers.py  utils.py
tests/data/: analyzed  analyzed.json  empty_list.json  ocds-sample-data-extension.json  ocds-sample-data.json  ocds-sample-data.jsonl  ocds-simplified-schema.json  only  releases_with_combined_tables.json  test_data.json  trailing_garbage.json  unnest
