[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "spoonbill"
version = "1.1.0"
authors = [{name = "Open Contracting Partnership", email = "data@open-contracting.org"}]
description = "Converts data that conforms to the Open Contracting Data Standard from JSON to Excel / CSV"
readme = "README.rst"
license = {text = "BSD"}
urls = {Homepage = "https://github.com/open-contracting/spoonbill"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "click",
    "click_logging",
    "flatten-dict",
    "ijson>=2.5",
    "jsonref",
    "ocdsextensionregistry",
    "ocdskit>=1.0.1",
    "requests",
    "scalpl",
    "xlsxwriter",
    'dataclasses;python_version<"3.7"',
    'importlib_resources;python_version<"3.12"',
]

[project.optional-dependencies]
test = [
    "coverage",
    "jmespath",
    "jsonpointer",
    "openpyxl",
    "pytest",
]

[project.scripts]
spoonbill = "spoonbill.cli:cli"

[tool.setuptools.packages.find]
exclude = [
    "tests",
    "tests.*",
]

[tool.ruff]
line-length = 119
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "PERF203", "PLR091", "Q000",
    "D1", "D205",
    "FIX002",  # todo
    "PLR2004",  # magic
    "PLW2901",
    "PTH",
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["copyright"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["D100", "INP001"]
"tests/*" = [
    "ARG001", "D", "FBT003", "INP001", "PLR2004", "S", "TRY003",
]
"spoonbill/cli.py" = ["ARG002"]  # click

[tool.pytest.ini_options]
addopts = '--doctest-modules'
