[flake8]
max-line-length = 119
extend-ignore = E203

[metadata]
name = spoonbill
version = 1.0.12
author = Open Contracting Partnership
author_email = data@open-contracting.org
license = BSD
description = Converts data that conforms to the Open Contracting Data Standard from JSON to Excel / CSV
url = https://github.com/open-contracting/spoonbill
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    click
    click_logging
    flatten-dict
    ijson>=2.5
    jsonref
    ocdsextensionregistry
    ocdskit>=1.0.1
    requests
    scalpl
    xlsxwriter
    dataclasses;python_version<"3.7"
    importlib_resources;python_version<"3.12"
include_package_data = True

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    spoonbill = spoonbill.cli:cli

[options.extras_require]
test =
    coveralls
    jsonpointer
    jmespath
    openpyxl
    pytest
    pytest-cov
docs =
    furo
    sphinx
    sphinx-autobuild
    sphinx_click
